--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
               <a class="dropdown-item nav-item" href="questica.html">Questica</a>
-              <a class="dropdown-item nav-item" href="opencounter.html">OpenCounter</a>
+              <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
@@ -125,10 +125,10 @@
         <div class="container pt-0">
           <div class="row pt-5">
             <div class="col-sm-6">
-              <h1 class="text-left font-weight-light"><span style="font-weight: 300;">I</span>  <span class="intro-1" style="font-weight:800;">research</span>, <span class="intro-2" style="font-weight:800;">design</span> & <span class="intro-3" style="font-weight:800;">illustrate</span>.</h1>
+              <h1 class="text-left font-weight-light" style="font-size: 44px;"><span style="font-weight: 300;">I</span>  <span class="intro-1" style="font-weight:800;">design</span>, <span class="intro-2" style="font-weight:800;">code</span><br> & <span class="intro-3" style="font-weight:800;">illustrate</span>.</h1>
             </div>
             <div class="col-sm-6 pb-3">
-              <p><span style="font-weight: 500;">I’m <span class="intro-0">Hannah Hatherell</span>, a visual designer based in Ottawa, Ontario.</span><br><br> I play a key role in crafting seamless user experiences and beautifully branded, story-telling designs from concept to execution. I work to solve complex problems with creative, user friendly solutions. I aim to deliver results through the implementation of visually captivating and highly effective design solutions.<br><br>Most recently, as Graphic Designer and Developer at Euna Solutions, I applied UX principles to craft top-tier marketing collateral tailored for SaaS solutions.</p>
+              <p><span style="font-weight: 500;">I’m <span class="intro-0">Hannah Hatherell</span>, an experienced designer based in Ottawa, Ontario.</span><br><br> I play a key role in crafting seamless user experiences and beautifully branded, story-telling designs from concept to execution. I work to solve complex problems with creative, user friendly solutions. I aim to deliver results through the implementation of visually captivating and highly effective design solutions.<br><br>Most recently, as Graphic Designer and Developer at Euna Solutions, I applied UX principles to craft top-tier marketing collateral tailored for SaaS solutions.</p>
               <ul class="list-inline mb-3">
                 <li class="list-inline-item">
                   <p class="font-weight-bold mb-3 list-inline">Let's connect > </p>
@@ -164,7 +164,7 @@
               <h5 class="text-left font-weight-light"><span style="font-weight: 500; font-size: 20px; letter-spacing: .2px;">CERTIFICATIONS</h5>
             </div>
             <div class="col-sm-6 pt-3" style="font-style: italic; font-size: 14px;">
-              <p style="font-style: normal; font-weight: 400;">Currently in progress:</p>
+              <p style="font-style: normal; font-weight: 400;">I'm currently learning:</p>
               <p class="mb-1">AI for Designers</p>
               <p class="mb-1">UX Design for Virtual Reality</p>
               <p class="mb-1">Data-Driven Design: Quantitative Research for UX</p>
