--- a/bonfire.html
+++ b/bonfire.html
@@ -76,8 +76,8 @@
     </div>
   </nav>
 
-  <section class="mx-auto pt-5" style="background-color:#E1D3E0;">
-    <div class="col-sm-8 col-md-10 col-lg-8 mx-auto">
+  <section class="mx-auto pt-5 mt-1" style="background-color:#E1D3E0;">
+    <div class="col-sm-8 col-md-10 col-lg-8 mx-auto pt-3">
       <div class="row text-center">
         <div class="text-center mx-auto">
           <img class="img-fluid" src="img/euna/sops-cover.png" alt="">
@@ -127,7 +127,7 @@
               <div class="text-center pt-3">
                 <img class="img-fluid" src="img/euna/sops-3.png">
               </div>
-              <p class="pt-2 text-center caption pr-3 pl-3" style="color:#fff;">We created a one-pager version of the report for use at events.</p>
+              <p class="pt-2 text-center caption pr-3 pl-3" style="color:#fff;">A one-pager version of the report for use at events.</p>
             </div>
           </div>
           </section>
@@ -138,7 +138,7 @@
                 <div class="text-center pt-3">
                   <img class="img-fluid" src="img/euna/sops-4.png">
                 </div>
-                <p class="pt-2 text-center caption">Our digital advertisements and organic social posts.</p>
+                <p class="pt-2 text-center caption">Digital advertisements and organic social posts.</p>
               </div>
             </div>
             </section>
@@ -157,7 +157,7 @@
                 <source src="img/euna/sops-lp.mp4" type="video/mp4">
               </video>
 
-              <p class="pt-2 text-center caption">The landing page our ad campaigns directed to for downloading the report.</p>
+              <p class="pt-2 text-center caption">The landing page ad campaigns pointed to for downloading the report.</p>
         </section>
 
 
@@ -167,7 +167,7 @@
               <h4 class="pb-3 mb-0 font-weight-bold">Results and takeaways</h4>
               <ul>
                 <li class="pb-3"><span class="font-weight-bold">Research, research, research. </span>I was already familiar with the retrofuturism theme, but to bring this campaign to life I needed to know it inside and out. I studied the history of the era as well as the design history through books, web articles—I even watched a few movies set in that time to get my mind into that space.</li>
-                <li class="pb-3"><span class="font-weight-bold">Good design drives results. </span>We increased the landing page conversion rate by 5.5x the conversion rate for the previous year AND this report recorded the most downloads of all previous years.</li>
+                <li class="pb-3"><span class="font-weight-bold">Good design drives results. </span>Increased the landing page conversion rate by 5.5x the conversion rate for the previous year AND this report recorded the most downloads of all previous years.</li>
                 <li class="pb-3"><span class="font-weight-bold">Consistency is key. </span>Building cohesiveness from page to page was critical in establishing a retrofuturism theme which translated into a beatifully designed campaign.</li>
                 <li class="pb-3"><span class="font-weight-bold">Overcome creative block. </span>It really helped me to connect with my team and bounce ideas around whenever I got stuck on something.</li>
               </ul>
@@ -186,7 +186,7 @@
                   <a href="questica.html"><img class="img-fluid project" src="img/questica.png"></a>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-                    <a href="euna.html"><img class="img-fluid project" src="img/euna.png"></a>
+                    <a href="nng.html"><img class="img-fluid project" src="img/nng.png"></a>
                   </div>
                 </div>
             </div>
