--- a/euna.html
+++ b/euna.html
@@ -55,7 +55,7 @@
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
               <a class="dropdown-item nav-item" href="questica.html">Questica</a>
-              <a class="dropdown-item nav-item" href="opencounter.html">OpenCounter</a>
+              <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
@@ -247,10 +247,10 @@
       <p class="font-weight-bold text-center">More Projects</p>
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-          <a href="questica.html"><img class="img-fluid project" src="img/questica.png"></a>
+          <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire.png"></a>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-          <a href="opencounter.html"><img class="img-fluid project" src="img/opencounter.png"></a>
+          <a href="questica.html"><img class="img-fluid project" src="img/questica.png"></a>
         </div>
       </div>
     </div>
