--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
               <a class="dropdown-item nav-item" href="questica.html">Questica</a>
-              <a class="dropdown-item nav-item" href="opencounter.html">OpenCounter</a>
+              <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
@@ -116,7 +116,7 @@
   <section class="pt-5 mt-5">
     <div class="container center">
       <div>
-        <h5 class="pt-4 mt-5 pl-4 pr-4 text-center" style="line-height: 39px; font-size: 30px; font-weight: 200;">Hello 👋 I’m an experienced visual designer with a background in marketing, who is enthusiastic about improving the lives of others through design.</h5>
+        <h5 class="pt-4 mt-5 pl-4 pr-4 text-center" style="line-height: 32px; font-size: 30px; font-weight: 200;">Hi, I'm Hannah 👋 I’m an experienced designer with a marketing background, who is enthusiastic about improving the lives of others through design.</h5>
         <br>
         <div class="text-center ixdf-mobile">
           <img class="w-50 pl-3 pr-3 pb-2" src="img/ixdf.png" alt="">
@@ -149,8 +149,8 @@
     </a>
   </div>
     <div class="col-sm-6">
-      <a class="d-block mx-auto mb-4" href="opencounter.html">
-        <img class="img-fluid project" src="img/opencounter.png">
+      <a class="d-block mx-auto mb-4" href="nng.html">
+        <img class="img-fluid project" src="img/nng.png">
       </a>
     </div>
   </div>
