--- a/various.html
+++ b/various.html
@@ -55,7 +55,7 @@
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
               <a class="dropdown-item nav-item" href="questica.html">Questica</a>
-              <a class="dropdown-item nav-item" href="opencounter.html">OpenCounter</a>
+              <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
@@ -77,18 +77,45 @@
     </div>
   </nav>
 
+  <div class="text-center pt-5">
+    <h1 class="pt-5 mt-3" style="font-size: 48px; font-weight: 600;">Various Works</h1>
+  </div>
+
+<div class="bb pt-2 w-25"></div>
+
+  <section class="mx-auto pt-5 mt-2 pb-5">
+            <div class="text-center">
+              <h1 class="pb-0 mb-0">CSS Animations</h1>
+            </div>
+
+    <div class="col-lg-8 mx-auto pt-4">
+      <video class="vimeo-lg" style="width: 640px; height: 360px" controls loop autoplay>
+            <source src="img/planets.mov" type="video/mp4">
+          </video>
+      <video class="vimeo-md" style="width: 540px; height: 260px" controls loop autoplay>
+            <source src="img/planets.mov" type="video/mp4">
+          </video>
+      <video class="vimeo-sm" style="width: 275px; height: 160px" controls loop autoplay>
+            <source src="img/planets.mov" type="video/mp4">
+      </video>
+
+      <p class="text-center">CSS animations | Source code <a class="link" href="https://codepen.io/hath0013/pen/VPPagm">here</a>.</p>
+
+    </section>
+
+    <div class="bb pt-2 pb-3"></div>
 
 
     <!-- Banner -->
-    <section class="banner-harper text-center"></section>
+    <!--<section class="banner-harper text-center"></section>-->
 
-    <div class="text-center pt-4">
+    <div class="text-center pt-5">
       <h1 class="pb-0 mb-0">Red Panda</h1>
       <p style="font-size: 14px; font-weight: 400;">Inspired by Charley Harper</p>
     </div>
   </div>
 
-      <section class="w-75 mx-auto pb-5">
+      <section class="w-75 mx-auto pb-0">
         <div class="col-lg-8 ml-auto mr-auto pt-4 pb-5">
           <!--<p>This project was inspired by Charley Harper's work and focuses on the basic gestalt principles of proximity, continuation, closure, as well as negative and positive space.</p>-->
 
@@ -109,8 +136,8 @@
         </div>
       </section>
 
-      <section class="banner-marvel bg-primary text-center pt-5">
-      </section>
+      <!--<section class="banner-marvel bg-primary text-center pt-5"></section>-->
+      <div class="bb pt-2 pb-3"></div>
 
 
       <div class="text-center pt-5">
@@ -119,7 +146,7 @@
       </div>
 
         <section>
-          <div class="col-lg-8 ml-auto mr-auto pt-4 pb-5">
+          <div class="col-lg-8 ml-auto mr-auto pt-4 pb-3">
             <div class="row pt-1 pb-5 pl-5 pr-5 mx-auto">
               <div class="pr-0 pl-0">
                 <img src="img/projects/commissions/loki-sbs.jpg" class="img-fluid" alt="">
@@ -131,29 +158,9 @@
           </div>
         </section>
 
-        <div class="text-center pt-5">
-          <h1 class="pb-0 mb-0">CSS Animations</h1>
-        </div>
 
 
-  <section class="mx-auto pb-5">
-
-    <div class="col-lg-8 mx-auto pt-4">
-      <video class="vimeo-lg" style="width: 640px; height: 360px" controls loop autoplay>
-            <source src="img/planets.mov" type="video/mp4">
-          </video>
-      <video class="vimeo-md" style="width: 540px; height: 260px" controls loop autoplay>
-            <source src="img/planets.mov" type="video/mp4">
-          </video>
-      <video class="vimeo-sm" style="width: 275px; height: 160px" controls loop autoplay>
-            <source src="img/planets.mov" type="video/mp4">
-      </video>
-
-      <p class="text-center">CSS animations | Source code <a class="link" href="https://codepen.io/hath0013/pen/VPPagm">here</a>.</p>
-
-    </section>
-
-    <section class="mx-auto banner-qe-hide">
+    <!--<section class="mx-auto banner-qe-hide">
         <div class="row text-center">
           <div class="text-center mx-auto">
             <img class="img-fluid" src="img/euna/q-e.jpg" alt="">
@@ -161,25 +168,12 @@
         </div>
     </section>
 
-  <section class="banner-qe text-center"></section>
-    <div class="text-center pt-5">
-      <h1 class="pb-0 mb-0 pr-3 pl-3">Questica & eCivis Advertising Illustrations</h1>
-      <p style="font-size: 14px; font-weight: 400;">From part of my work at Euna Solutions</p>
-    </div>
-
-    <div class="container pt-0 pb-5 mb-5 center">
-      <div class="row pt-0">
-        <div class="col-sm-6 pt-2">
-          <img class="img-fluid" src="img/euna/ecivis-ad.png">
-        </div>
-        <div class="col-sm-6 pt-2">
-          <img class="img-fluid" src="img/euna/questica-ad.png">
-        </div>
-      </div>
-    </div>
+  <section class="banner-qe text-center"></section>-->
 
 
-    <section class="banner-octo text-center"></section>
+
+    <!--<section class="banner-octo text-center"></section>-->
+    <div class="bb pt-2 pb-3"></div>
 
     <div class="text-center pt-5">
       <h1 class="pb-0 mb-0">Blue Ringed Octopus Illustration</h1>
@@ -199,6 +193,24 @@
               <source src="img/octo.mp4" type="video/mp4">
             </video>
       </section>
+
+      <div class="bb pt-5 pb-3"></div>
+  <div class="text-center pt-5">
+    <h1 class="pb-0 mb-0 pr-3 pl-3">Questica & eCivis Advertising Illustrations</h1>
+    <p style="font-size: 14px; font-weight: 400;">From part of my work at Euna Solutions</p>
+  </div>
+
+
+  <div class="container pt-0 pb-5 mb-5 center">
+    <div class="row pt-0">
+      <div class="col-sm-6 pt-2">
+        <img class="img-fluid" src="img/euna/ecivis-ad.png">
+      </div>
+      <div class="col-sm-6 pt-2">
+        <img class="img-fluid" src="img/euna/questica-ad.png">
+      </div>
+    </div>
+  </div>
 
 
 <div class="bb mb-5 pt-5"></div>
