--- a/csp.html
+++ b/csp.html
@@ -54,7 +54,7 @@
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
               <a class="dropdown-item nav-item" href="questica.html">Questica</a>
-              <a class="dropdown-item nav-item" href="opencounter.html">OpenCounter</a>
+              <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
@@ -276,7 +276,7 @@
 
   <footer id="connect" class="footer center text-center pb-3" id="footer">
     <div class="container">
-      <h5 class="font-weight-bold mb-3">Let's connect</h5>
+      <h5 class="font-weight-bold mb-3">Let's Connect</h5>
         <p>Get in touch for opportunities or just to say hi! 👋</p>
           <ul class="list-inline mb-3">
             <li class="list-inline-item">
