--- a/masterpiece-vr.html
+++ b/masterpiece-vr.html
@@ -54,7 +54,7 @@
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
               <a class="dropdown-item nav-item" href="questica.html">Questica</a>
-              <a class="dropdown-item nav-item" href="opencounter.html">OpenCounter</a>
+              <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
@@ -236,7 +236,7 @@
       <p class="font-weight-bold text-center">More Projects</p>
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-          <a href="opencounter.html"><img class="img-fluid project" src="img/opencounter.png"></a>
+          <a href="nng.html"><img class="img-fluid project" src="img/nng.png"></a>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
             <a href="csp.html"><img class="img-fluid project" src="img/csp.png"></a>
