--- a/questica.html
+++ b/questica.html
@@ -54,7 +54,7 @@
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
               <a class="dropdown-item nav-item" href="questica.html">Questica</a>
-              <a class="dropdown-item nav-item" href="opencounter.html">OpenCounter</a>
+              <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
@@ -143,10 +143,10 @@
               <p class="font-weight-bold text-center">More Projects</p>
               <div class="row pt-4 pb-2">
                 <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-                  <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire.png"></a>
+                  <a href="nng.html"><img class="img-fluid project" src="img/nng.png"></a>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-                    <a href="euna.html"><img class="img-fluid project" src="img/euna.png"></a>
+                    <a href="masterpiece-vr.html"><img class="img-fluid project" src="img/mpvr.png"></a>
                   </div>
                 </div>
             </div>
