--- a/bonfire.html
+++ b/bonfire.html
@@ -166,7 +166,7 @@
             <div>
               <h4 class="pb-3 mb-0 font-weight-bold">Results and takeaways</h4>
               <ul>
-                <li class="pb-3"><span class="font-weight-bold">Research, research, research. </span>I was already familiar with the retrofuturism theme, but to bring this campaign to life I needed to know it inside and out. I studied the history of the era as well as the design history through books, web articles—I even watched a few movies set in that time to get my mind into that space.</li>
+                <li class="pb-3"><span class="font-weight-bold">Research is essential. </span>I was already familiar with the retrofuturism theme, but to bring this campaign to life I needed to know it inside and out. I studied the history of the era as well as the design history through books, web articles—I even watched a few movies set in that time to get my mind into that space.</li>
                 <li class="pb-3"><span class="font-weight-bold">Good design drives results. </span>Increased the landing page conversion rate by 5.5x the conversion rate for the previous year AND this report recorded the most downloads of all previous years.</li>
                 <li class="pb-3"><span class="font-weight-bold">Consistency is key. </span>Building cohesiveness from page to page was critical in establishing a retrofuturism theme which translated into a beatifully designed campaign.</li>
                 <li class="pb-3"><span class="font-weight-bold">Overcome creative block. </span>It really helped me to connect with my team and bounce ideas around whenever I got stuck on something.</li>
