pushing meta tag updates
for home & euna to test if link previews are working

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <meta property="og:image" content="hh-preview.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
@@ -19,7 +20,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 
@@ -116,7 +118,7 @@
   <section class="pt-5 mt-5">
     <div class="container center">
       <div>
-      <h5 class="pt-3 mt-5 pl-4 pr-4 text-center pb-1" style="font-size: 36px; font-weight: 300;">Hi, I'm Hannah 👋</span></h5>
+        <h5 class="pt-3 mt-5 pl-4 pr-4 text-center pb-1" style="font-size: 36px; font-weight: 300;">Hi, I'm Hannah 👋</span></h5>
         <h5 class="pl-4 pr-4 text-center" style="line-height: 34px; font-size: 30px; font-weight: 200;">I’m an experienced designer with a marketing background, who is enthusiastic about solving complex problems with design solutions.</h5>
         <br>
         <div class="text-center ixdf-mobile">
@@ -125,60 +127,61 @@
         <div class="text-center ixdf-desktop">
           <img class="w-25 pl-3 pr-3 pb-2" src="img/ixdf.png" alt="">
         </div>
-        <p class="text-center" style="font-size: 12px; font-style: italic; ">I am an active member of the Interaction Design Foundation.</p>
-
-        </div>
+        <p class="text-center" style="font-size: 12px; font-style: italic;">I am an active member of the Interaction Design Foundation.</p>
       </div>
-    </section>
+    </div>
+  </section>
+
+
 
   <div class="container">
-  <div class="row pt-5">
-    <div class="col-sm-6">
-      <a class="d-block mx-auto mb-4" href="euna.html">
+    <div class="row pt-5">
+      <div class="col-sm-6">
+        <a class="d-block mx-auto mb-4" href="euna.html">
         <img class="img-fluid project" src="img/euna.png">
       </a>
-    </div>
-    <div class="col-sm-6">
-      <a class="d-block mx-auto mb-4" href="bonfire.html">
+      </div>
+      <div class="col-sm-6">
+        <a class="d-block mx-auto mb-4" href="bonfire.html">
         <img class="img-fluid project" src="img/bonfire.png">
       </a>
-    </div>
-  <div class="w-100"></div>
-  <div class="col-sm-6">
-    <a class="d-block mx-auto mb-4" href="questica.html">
+      </div>
+      <div class="w-100"></div>
+      <div class="col-sm-6">
+        <a class="d-block mx-auto mb-4" href="questica.html">
       <img class="img-fluid project" src="img/questica.png">
     </a>
-  </div>
-    <div class="col-sm-6">
-      <a class="d-block mx-auto mb-4" href="nng.html">
+      </div>
+      <div class="col-sm-6">
+        <a class="d-block mx-auto mb-4" href="nng.html">
         <img class="img-fluid project" src="img/nng.png">
       </a>
+      </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-sm-6">
-      <a class="d-block mx-auto mb-4" href="masterpiece-vr.html">
+    <div class="row">
+      <div class="col-sm-6">
+        <a class="d-block mx-auto mb-4" href="masterpiece-vr.html">
         <img class="img-fluid project" src="img/mpvr.png">
       </a>
-    </div>
-    <div class="col-sm-6">
-      <a class="d-block mx-auto mb-4" href="csp.html">
+      </div>
+      <div class="col-sm-6">
+        <a class="d-block mx-auto mb-4" href="csp.html">
         <img class="img-fluid project" src="img/csp.png">
       </a>
-    </div>
-  <div class="w-100"></div>
-    <div class="col-sm-6">
-      <a class="d-block mx-auto mb-4" href="cmg.html">
+      </div>
+      <div class="w-100"></div>
+      <div class="col-sm-6">
+        <a class="d-block mx-auto mb-4" href="cmg.html">
         <img class="img-fluid project" src="img/cmg.png">
       </a>
-    </div>
-    <div class="col-sm-6">
-      <a class="d-block mx-auto mb-4" href="canopy.html">
+      </div>
+      <div class="col-sm-6">
+        <a class="d-block mx-auto mb-4" href="canopy.html">
         <img class="img-fluid project" src="img/canopy.png">
       </a>
-    </div>
-    <div class="w-100"></div>
+      </div>
+      <div class="w-100"></div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="hhi.html">
           <img class="img-fluid project" src="img/hhi.png">
@@ -189,8 +192,8 @@
           <img class="img-fluid project" src="img/various.png">
         </a>
       </div>
+    </div>
   </div>
-</div>
 
 
 
@@ -232,7 +235,7 @@
   <section class="publications text-center pb-4 text-white" id="csp" style="background-color: #282c30;">
     <a href="http://cdnsciencepub.com" target="_blank"><img class="c-logo-1 img-fluid project pb-4 pt-5" src="img/brands/csp.png" alt=""></a>
     <h3 class="text-center text-uppercase pt-5 text-primary">Canadian Science Publishing</h3>-->
-    <!--<p class="text-center">_____</p>
+  <!--<p class="text-center">_____</p>
     <p class="text-center as">Growing and supporting a Canadian not-for-profit scholarly publisher as the marketing team's Graphic Designer.</p>
     <div id="pw" class="container">
       <div class="row pt-4 text-center">
@@ -375,7 +378,7 @@
         </div> -->
 
 
-        <!-- Desktop 2
+  <!-- Desktop 2
         <div class="row pt-3 mx-auto">
           <div class="col-lg-6 cards-desktop mx-auto">
             <a class="d-block mx-auto" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/" target="_blank">
@@ -601,19 +604,19 @@
   <footer id="connect" class="footer center text-center pt-5 pb-3" id="footer">
     <div class="container">
       <h5 class="font-weight-bold mb-3">Let's Connect</h5>
-        <p>Get in touch for opportunities or just to say hi! 👋</p>
-          <ul class="list-inline mb-3">
-            <li class="list-inline-item">
-              <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+      <p>Get in touch for opportunities or just to say hi! 👋</p>
+      <ul class="list-inline mb-3">
+        <li class="list-inline-item">
+          <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
+        </li>
+        <li class="list-inline-item">
+          <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
                   <i class="fas fa-envelope"></i>
                 </a>
-            </li>
-          </ul>
+        </li>
+      </ul>
   </footer>
 
   <div class="copyright py-4 text-center" <div class="container pt-1">
