--- a/euna.html
+++ b/euna.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <meta property="og:title" content="Title test" />
+  <meta property="og:description" content="Title test" />
+  <meta property="og:url" content="https://www.hannahhatherell.com/euna.html" />
   <meta property="og:image" content="euna.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
