meta tags are working, changing them
image still isn't working for some reason.. maybe it just needs time. Tags are good.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <meta property="og:title" content="Title test" />
-  <meta property="og:description" content="Title test" />
+  <meta property="og:title" content="Hannah Hatherell" />
+  <meta property="og:description" content="Hi, I'm Hannah 👋 I’m an experienced designer with a marketing background, who is enthusiastic about solving complex problems with design solutions.
+" />
   <meta property="og:url" content="https://www.hannahhatherell.com/index.html" />
   <meta property="og:image" content="hh-preview.png" />
 
