home meta update & euna
of course the image wasn't working >.> silly. fixed.

euna description updated some more

--- a/euna.html
+++ b/euna.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <meta property="og:title" content="Title test" />
-  <meta property="og:description" content="Title test" />
+  <meta property="og:title" content="Euna Solutions (formerly GTY)" />
   <meta property="og:url" content="https://www.hannahhatherell.com/euna.html" />
   <meta property="og:image" content="euna.png" />
 
@@ -95,12 +94,12 @@
     <div class="container center pb-5">
       <div class="pb-2">
         <h2 class="pb-0 mb-2" style="font-size: 36px;">Euna Solutions (formerly GTY)</h2>
-        <p style="font-size: 14px; font-weight: 400;">Design System Build | Landing Pages</p>
+        <p style="font-size: 14px; font-weight: 400;">Design System | Landing Pages</p>
       </div>
       <div class="row">
         <div class="col-sm-12 col-md-8 col-xl-8">
           <p class="gray" style="font-weight: 600;">OVERVIEW</p>
-          <p class="pb-3">Euna Solutions consolidated and rebranded in May 2023 which posed numerous design questions and challenges. I was tasked with creating a seamless and efficient Design System for Euna's Unbounce landing pages which could be used easily by the Digital and Design teams.</p>
+          <p class="pb-3">Euna Solutions consolidated and rebranded in May 2023 which posed numerous design questions and challenges. I was tasked with crafting a seamless and efficient Design System for Euna's campaign landing pages which could be used easily by the Digital and Design teams.</p>
         </div>
         <div class="col-sm-12 col-md-4 col-xl-4">
           <p class="gray" style="font-weight: 600;">ROLE</p>
@@ -120,14 +119,15 @@
       <div class="pb-2">
         <h4 class="pb-3 font-weight-bold">Background</h4>
 
-        <p>Previously 9 different companies, Euna Solutions delivers best-in-class solutions that keep the public sector thriving. Launched in May 2023, different public sector software companies consolidated to offer a platform of products. Our design team was made up of 3 people, on a Marketing team of about 40.</p>
-        <h4 class="pb-3">I designed and implemented design systems and structures.</h4>
-        <p>In addition to day-to-day graphics, I focused on designing design systems at Euna. I learned about SaaS and Marketing, during this time I was able to accomplish these key achievements:</p>
+        <p>Previously 9 different companies, Euna Solutions delivers best-in-class solutions that keep the public sector thriving. Launched in May 2023, different public sector software companies consolidated to offer a platform of products.</p>
+        <p>I collaborated closely with a dynamic team of three designers and the Digital and Product teams, making significant contributions to the Marketing and Sales departments. My core design responsibilities included website audits, creating compelling landing pages, presentations, eBooks, and various campaign creative, ensuring a consistent and impactful brand presence across all channels.</p>
+        <p style="font-weight: 600;">I accomplished these key achievements:</p>
         <ul>
-          <li class="pb-3"><span class="font-weight-bold">Designed and implemented a landing page Design System.</span> This was key in elevating Euna's new brand and bridging the Digital and Design teams.</li>
-          <li class="pb-3"><span class="font-weight-bold">Implemented a file and folder system for design.</span> This system established cohesiveness and consistency among our internal design team and could also be used by external designers.</li>
-          <li class="pb-3"><span class="font-weight-bold">Built, distributed and maintained brand libraries.</span> I built Adobe Creative Cloud libraries to be accessible by anyone with an Adobe account. This was critical in creating brand consistency with the Marketing & Comms teams.</li>
-          <li class="pb-3"><span class="font-weight-bold">Mentored and art-directed Junior Designers.</span> Providing support and art direction for Junior Designers was a new experience and strengthened my team-building skills.</li>
+          <li class="pb-1"><span style="font-weight: 600;">Enhanced processes,</span> reducing campaign launch time through strategic design solutions.</li>
+            <li><span style="font-weight: 600;">Facilitated a swift rebrand</span> with exceptional organizational and time management skills.</li>
+          <li class="pb-1"><span style="font-weight: 600;">Improved campaign impact</span> and performance by working cross-functionally and delivering visually compelling, brand-consistent graphics.</li>
+          <li class="pb-1"><span style="font-weight: 600;">Boosted design team efficiency</span> by implementing template and brand libraries in addition to standardized file systems.</li>
+          <li class="pb-1"><span style="font-weight: 600;">Consistently maintained</span> high-quality work across diverse product lines.</li>
         </ul>
       </div>
     </div>
