--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
   <meta property="og:title" content="Hannah Hatherell" />
   <meta property="og:description" content="Hi, I'm Hannah 👋 I’m an experienced designer with a marketing background, who is enthusiastic about solving complex problems with design solutions.
 " />
   <meta property="og:url" content="https://www.hannahhatherell.com/index.html" />
-  <meta property="og:image" content="hh-preview.png" />
+  <meta property="og:image" content="img/hh-preview.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
