--- a/bonfire.html
+++ b/bonfire.html
@@ -5,8 +5,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta property="og:title" content="Euna Solutions (formerly GTY)" />
+  <meta property="og:url" content="https://www.hannahhatherell.com/euna.html" />
+  <meta property="og:image" content="img/euna.png" />
+
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
@@ -54,7 +56,7 @@
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
               <a class="dropdown-item nav-item" href="questica.html">Questica</a>
-              <a class="dropdown-item nav-item" href="opencounter.html">OpenCounter</a>
+              <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
