--- a/euna.html
+++ b/euna.html
@@ -5,11 +5,9 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
   <meta property="og:title" content="Euna Solutions (formerly GTY)" />
   <meta property="og:url" content="https://www.hannahhatherell.com/euna.html" />
-  <meta property="og:image" content="euna.png" />
+  <meta property="og:image" content="img/euna.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
