--- a/bonfire.html
+++ b/bonfire.html
@@ -5,9 +5,9 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:title" content="Euna Solutions (formerly GTY)" />
-  <meta property="og:url" content="https://www.hannahhatherell.com/euna.html" />
-  <meta property="og:image" content="img/euna.png" />
+  <meta property="og:title" content="Bonfire Interactive, a Euna Solutions Brand" />
+  <meta property="og:url" content="https://www.hannahhatherell.com/bonfire.html" />
+  <meta property="og:image" content="img/meta-bonfire.png" />
 
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
