--- a/nng.html
+++ b/nng.html
@@ -5,8 +5,9 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta property="og:title" content="Nielsen Norman Group" />
+  <meta property="og:url" content="https://www.hannahhatherell.com/nng.html" />
+  <meta property="og:image" content="img/meta-nng.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
