pushing update for canopy
spelling error

--- a/canopy.html
+++ b/canopy.html
@@ -96,7 +96,7 @@
       <div class="row">
         <div class="col-sm-12 col-md-8 col-xl-7">
             <p class="gray" style="font-weight: 600;">OVERVIEW</p>
-            <p>As part of my role at Canopy Growth, I was responsible for photographing products and retouching images across corporate, recreational and medical brands. These assets were used on eCommerce sites across the country and had to meet strict Health Canada requirements. I contributed to many design projects at Canopy’s, one example was creating some iconography for their medical brand, Spectrum Therapeutics.</p>
+            <p>As part of my role at Canopy Growth, I was responsible for photographing products and retouching images across corporate, recreational and medical brands. These assets were used on eCommerce sites across the country and had to meet strict Health Canada requirements. I contributed to many design projects at Canopy, one example was creating iconography for their medical brand, Spectrum Therapeutics.</p>
           </div>
           <div class="col-sm-12 col-md-4 col-xl-4">
             <p class="gray" style="font-weight: 600;">ROLE</p>
