pushing update for questica

--- a/questica.html
+++ b/questica.html
@@ -125,7 +125,7 @@
           <div class="container center">
             <div>
               <h4 class="pb-3 mb-0 font-weight-bold">Results and takeaways</h4>
-              <p>As the campaign is launching in February 2024 and running for several weeks, I am currently unable to report on the metrics.</p>
+              <p>As the campaign is launching in February 2024 and running for several weeks, I am currently unable to report on the performance metrics.</p>
               <p>Some key takeaways from this project are: </p>
               <ul>
                 <li class="pb-3"><span class="font-weight-bold">Don't be afraid to try push the design boundaries. </span>This was a great opportunity to push the brand guidelines while staying within our colour palette, and do something eye-catching that would receive immediate attention.</li>
