--- a/euna.html
+++ b/euna.html
@@ -227,11 +227,19 @@
 
   <section class="pb-4 pt-4" style="background-color: #e3e6f4;">
     <div class="container center">
-      <h4 class="pt-5 mb-0 font-weight-bold">Euna Solutions: Other Work</h4>
+      <h4 class="pt-5 pb-5 mb-0 font-weight-bold">Euna Solutions: Other Work & Contributions</h4>
       <div>
         <div class="text-center">
+          <img class="img-fluid pb-3" src="img/euna/euna-3.png">
+          <p class="pt-0 mt-0 pb-3 text-center caption">Euna Brand Applications</p>
+        </div>
+        <div class="text-center">
+          <img class="img-fluid pb-3" src="img/euna/euna-2.png">
+          <p class="pt-0 mt-0 text-center caption">Euna Brand Guidelines</p>
+        </div>
+        <div class="text-center">
           <img class="img-fluid" src="img/euna/euna-4.png">
-          <p class="pt-0 mt-0 pb-3 text-center caption">Euna Budget Whitepaper</p>
+          <p class="pt-0 mt-0 pb-5 text-center caption">Euna Budget Whitepaper</p>
         </div>
         <div class="text-center">
           <img class="img-fluid" src="img/euna/euna-cards.png">
