--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Hannah Hatherell" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:description" content="Hi, I'm Hannah 👋 I’m an experienced designer with a marketing background, who is enthusiastic about solving complex problems with design solutions." />
   <meta property="og:url" content="https://www.hannahhatherell.com/index.html" />
   <meta property="og:image" content="img/hh-preview.png" />
