--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image:height" content="630" />
   <meta property="og:description" content="Hi, I'm Hannah 👋 I’m an experienced designer with a marketing background, who is enthusiastic about solving complex problems with design solutions." />
   <meta property="og:url" content="https://www.hannahhatherell.com/index.html" />
-  <meta property="og:image" content="//home.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/home.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
